[gd_scene load_steps=12 format=2]

[ext_resource path="res://bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ships/playerShip2_blue.png" type="Texture" id=2]
[ext_resource path="res://assets/shieldGreen_Edit.png" type="Texture" id=3]
[ext_resource path="res://assets/fire11.png" type="Texture" id=4]
[ext_resource path="res://ships/player_ship.gd" type="Script" id=5]
[ext_resource path="res://ships/debug_vis.gd" type="Script" id=6]
[ext_resource path="res://assets/crosshair123.png" type="Texture" id=7]
[ext_resource path="res://assets/hud/yellow_dir_arrow.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 23.0021

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
initial_velocity = 0.13
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 0.3
color = Color( 0.0117647, 0.996078, 0.972549, 1 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/playerShip2_blue:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 0.2, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/shield_indicator:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area2D/dock:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 23 ), Vector2( 0, 20 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Area2D/engine_flare:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 34 ), Vector2( 0, 20 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Area2D/muzzle:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -70 ), Vector2( 0, -30 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Area2D/playerShip2_blue:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -1 ]
}

[node name="Node2D" type="Node2D"]
z_as_relative = false

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 5 )
bullet = ExtResource( 1 )

[node name="playerShip2_blue" type="Sprite" parent="Area2D"]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Area2D"]
current = true

[node name="bullet_container" type="Node" parent="Area2D"]

[node name="muzzle" type="Position2D" parent="Area2D"]
position = Vector2( -25, 0 )

[node name="muzzle2" type="Position2D" parent="Area2D"]
position = Vector2( 25, 0 )

[node name="gun_timer" type="Timer" parent="Area2D"]
wait_time = 0.5
one_shot = true

[node name="engine_flare" type="Particles2D" parent="Area2D"]
position = Vector2( 0, 34 )
scale = Vector2( 0.5, 1 )
amount = 2
lifetime = 0.3
process_material = SubResource( 2 )
texture = ExtResource( 4 )

[node name="dock" type="Position2D" parent="Area2D"]
position = Vector2( 0, 23 )

[node name="shield_effect" type="Sprite" parent="Area2D"]
visible = false
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="shield_timer" type="Timer" parent="Area2D"]
wait_time = 0.5

[node name="shield_indicator" type="Sprite" parent="Area2D"]
modulate = Color( 0, 1, 0, 1 )
texture = ExtResource( 7 )

[node name="recharge_timer" type="Timer" parent="Area2D"]
process_mode = 0

[node name="shield_recharge_timer" type="Timer" parent="Area2D"]
process_mode = 0
autostart = true

[node name="heat_timer" type="Timer" parent="Area2D"]
one_shot = true

[node name="engine_timer" type="Timer" parent="Area2D"]
autostart = true

[node name="target_dir" type="Sprite" parent="Area2D"]
visible = false
modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 8 )

[node name="warp_correct_timer" type="Timer" parent="Area2D"]

[node name="vis" type="Node2D" parent="Area2D"]
visible = false
script = ExtResource( 6 )

[node name="landing_timeout" type="Timer" parent="Area2D"]
wait_time = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/landing = SubResource( 3 )
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="timeout" from="Area2D/shield_timer" to="Area2D" method="_on_shield_timer_timeout"]
[connection signal="timeout" from="Area2D/recharge_timer" to="Area2D" method="_on_recharge_timer_timeout"]
[connection signal="timeout" from="Area2D/shield_recharge_timer" to="Area2D" method="_on_shield_recharge_timer_timeout"]
[connection signal="timeout" from="Area2D/engine_timer" to="Area2D" method="_on_engine_timer_timeout"]
[connection signal="timeout" from="Area2D/warp_correct_timer" to="Area2D" method="_on_warp_correct_timer_timeout"]
[connection signal="timeout" from="Area2D/landing_timeout" to="Area2D" method="_on_landing_timeout_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="Area2D" method="_on_AnimationPlayer_animation_finished"]
